# autoguard-fleet-drift

./: README.md  SOURCES.md  app.py  pyproject.toml
scripts/: run_demo.py
src/autoguard_drift/: __init__.py  bocpd.py  conformal.py  demo.py  fingerprint.py  foundation.py  monitor.py  schemas.py
tests/: test_drift.py
